# MUDular-Client

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
.github/workflows/: pages.yml  release.yml
android/: build-android.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mudular/client/: ImmersiveHelper.java
profiles/aardwolf/: init.lua
profiles/achaea/: init.lua
profiles/batmud/: init.lua
profiles/discworld/: init.lua
profiles/generic/: init.lua
profiles/nukefire/: init.lua  init.scm
profiles/nukefire-ws/: init.scm
src/: ansi.rs  app.rs  buffer.rs  connection.rs  discord_rpc.rs  fonts.rs  lib.rs  main.rs  probe.rs  profile.rs  telnet.rs  themes.rs  web_connection.rs
src/profiles/: nukefire_custom.scm
src/protocol/: gmcp.rs  mccp.rs  mod.rs  msdp.rs  mssp.rs
src/scripting/: api.rs  mod.rs
src/ui/: editor.rs  gauges.rs  input.rs  layout.rs  mod.rs  panes.rs  profile_list.rs
