[package]
name = "mudular"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
egui_extras = "0.34"
tokio = { version = "1", features = ["full"] }
mlua = { version = "0.11", features = ["luau", "serialize"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"
regex = "1"
directories = "6"
log = "0.4"
env_logger = "0.11"
