[package]
name = "mudular"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_extras = "0.34"
steel-core = "0.8"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"
directories = "6"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
