[package]
name = "mudular"
version = "0.1.3"
edition = "2024"

[lib]
name = "mudular"
crate-type = ["lib", "cdylib"]

[dependencies]
eframe = { version = "0.35", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_extras = "0.35"
egui_code_editor = "0.3.7"
steel-core = "0.8"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
log = "0.4"

# Shared native (desktop + android): TCP/TLS networking
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"

# Desktop only (Linux/macOS/Windows)
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
eframe = { version = "0.35", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
discord-rich-presence = "1.1"
image = { version = "0.25", default-features = false, features = ["png"] }
font-kit = "0.14.3"
directories = "6"
env_logger = "0.11"

# Android
[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.35", default-features = false, features = [
    "default_fonts",
    "glow",
    "android-native-activity",
] }
android-activity = "0.6"
android_logger = "0.14"
jni = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "BinaryType",
    "console",
    "Document",
    "ErrorEvent",
    "Event",
    "HtmlCanvasElement",
    "MessageEvent",
    "WebSocket",
    "Window",
] }
